--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
      <div class="top">
       <nav>
         <img src="hmslogo2.png" height="50px" align="left">
-        <a href="home.html"><b>Home</b></a>
+        <a href="index.html"><b>Home</b></a>
         <a href="about.html"><b>About</b></a>
 		    <a href="contact.html"><b>Contact</b></a>
         
