--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@ font-size:18px;
       
         <nav>
           <img src="hmslogo2.png" height="50px" align="left">
-        <a href="home.html"><b>Home</b></a>
+        <a href="index.html"><b>Home</b></a>
         <a href="about.html"><b>About</b></a>
         <a href="contact.html"><b>Contact</b></a>
         
