--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@ display: block;
 
   <div class="top">
     <nav>
-    <a href="home.html"><b>Home</b></a>
+    <a href="index.html"><b>Home</b></a>
     <a href="about.html"><b>About</b></a>
     <a href="contact.html"><b>Contact</b></a>
     
