--- a/patLog.html
+++ b/patLog.html
@@ -96,7 +96,7 @@ display: block;
 <div class="top">
 		  <nav>
 		  <img src="hmslogo2.png" height="50px" align="left">
-		  <a href="home.html"><b>Home</b></a>
+		  <a href="index.html"><b>Home</b></a>
 		  <a href="about.html"><b>About</b></a>
 		  <a href="contact.html"><b>Contact</b></a>
 		  
