--- a/doclog.html
+++ b/doclog.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -108,7 +107,7 @@ display: block;
 		  <i class="fa fa-caret-down"></i>
 		  </button>
 		  <div class="dropdown-content">
-		  <a href="doclog.html">Doctor's Portal</a>
+		  <a href="docLog.html">Doctor's Portal</a>
 		  <a href="patLog.html">Patient's Portal</a>
 		  <a href="adLog.html">Admin's Portal</a>
 		  <a href="reg.html">New Patient Registration</a>
@@ -120,7 +119,7 @@ display: block;
 		  
 <div id="dlog">
 <center><h1>Doctor's Portal</h1></center>
-<form align="center" action="doclog.php" method="post">
+<form align="center">
 Doctor Id: <input type="text" name="Uname" style="border-radius:10px" required>
 <br><br>
 Password: <input type="password" name="password" style="border-radius:10px" required>
