--- a/reg.html
+++ b/reg.html
@@ -107,7 +107,7 @@ display: block;
     <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-    <a href="doclog.html">Doctor's Portal</a>
+    <a href="docLog.html">Doctor's Portal</a>
     <a href="patLog.html">Patient's Portal</a>
     <a href="adLog.html">Admin's Portal</a>
     <a href="reg.html">New Patient Registration</a>
