--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ display: block;
     </table>
     <br><hr><br>
     <hr color="brown"; style="width:25%; text-align:center; border: 2px solid maroon; border-radius: 5px;">
-    <div id="quote" style="margin:0 auto; width:50%; background-color: rgba(249,168,37,0.8);">
+    <div id="quote" style="margin:0 auto; width:50%; background-color: rgba(249,168,37,0.8); box-shadow: 5px 5px 10px 5px rgba(0,0,0,0.3);">
     <h2><i class="fas fa-quote-left [&#xf10d]"></i>
     &nbsp<i>Time and health are two precious assets that we don’t recognize and appreciate until they have been depleted.</i>
     &nbsp<i class="fas fa-quote-right [&#xf10e]"></i>
