--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ display: block;
        </tr>
        <tr valign = "middle" align="center">
           <td style="background-color: rgb(170,170,170)"; width = "33%">
-             <a style="all: none" class="btn btn-primary" href="docLog.html" role="button">Doctor ID</a>
+             <a href="docLog.html" role="button">Doctor ID</a>
           </td>
 <td style= "background-color: rgb(170,170,170);" width = "33%" height = "30">
              <a href="adLog.html">Admin ID</a>
