--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ display: block;
       <tr>
           <td colspan = "3" bgcolor = "#2eb89c" style="text-align: center; vertical-align: middle;">
 		  <img src="hmslogo2.png" height="100px" style="box-shadow: 5px 5px 10px 5px rgba(0,0,0,0.3);">
-             <h1>Hospital Database Management System</h1>
+             <h1>Hospital Management System</h1>
           </td>
 		
 		  <tr>
