--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
 </head>
 
 <style>
+a{
+background-color: #4CAF50;
+color: black;
+border: none;
+cursor: pointer;
+margin: 4px 2px;
+border-radius: 3px;
+box-shadow: 5px 5px 10px 5px rgba(0,0,0,0.3);
+text-decoration: 0;
+padding: 4px;
+}
+
+a:hover{
+background-color: #302d2d;
+color: white;
+box-shadow: none;
+	
 .top { background-color:#04b861;
 overflow: hidden;
 }
