--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <style>
-a{
+table a{
 background-color: #4CAF50;
 color: black;
 border: none;
@@ -19,7 +19,7 @@ text-decoration: 0;
 padding: 4px;
 }
 
-a:hover{
+table a:hover{
 background-color: #302d2d;
 color: white;
 box-shadow: none;
